--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@ Front end
 	- displays two bars with 0 space on top of each other with user and critic name next to it
 	to the left is the thumbnail and name
 	we don't need api call, we can just find the movies array? or we do because of active or we can create a second object that holds all the movies and the active movies and acts as a reference for us to draw on when we are listing movies on critics page
+- fix back button that loads an extra group of movies
 Scraper
 - recent scrape and cron job scrape
 - push database to heroku
