--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ Front end
 	to the left is the thumbnail and name
 	we don't need api call, we can just find the movies array? or we do because of active or we can create a second object that holds all the movies and the active movies and acts as a reference for us to draw on when we are listing movies on critics page
 - fix back button that loads an extra group of movies
+- make sure i'm not pulling duplicates or that there are no duplicate movies
 Scraper
 - recent scrape and cron job scrape
 - push database to heroku
