--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,14 @@
 Now
 
 Front end
-- center the movies div. when i moved to application.js it fucked up the style
 - Move javascript to js file
 - add critics page /critics/:id
 	- displays two bars with 0 space on top of each other with user and critic name next to it
 	to the left is the thumbnail and name
 	we don't need api call, we can just find the movies array? or we do because of active or we can create a second object that holds all the movies and the active movies and acts as a reference for us to draw on when we are listing movies on critics page
-- fix back button that loads an extra group of movies
 - make sure i'm not pulling duplicates or that there are no duplicate movies
 Scraper
-- recent scrape and cron job scrape
+- fix cron job for production database
 - push database to heroku
 - record video showing code and app
 - Javascript tests with mocha or jasmine
