fixes bug where name rather than ID was being sent to batch api

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,12 @@
 
-note - maybe after 20 reviews or something, it narrows down to a specific group of critics then finds the movies they rated in common and asks those?
 
 Now
+2. Fix when movies are loaded again that it retains old movies and pulls duplicates
+3. create a critic page to show how your reviews stack against their reviews then show top 5 movies they liked with the greatest difference between 
+metacritic average and theirs
+
+
+
 look at scraping the genre from each movie page and adding that as a column. then present a list of genres to the user first time up
 
 
