--- a/todo.txt
+++ b/todo.txt
@@ -1,72 +1,40 @@
 
+Today
+Get against the grain movies working
+
+Next couple of days
+Look at mobile
+Look at creating some sort of intro / instructions
+Test actual api call for recent scrape and invidivual movie scrape
+Set up the scheduler / cron job
+Figure out what did i put for how the top 3 matches work because i've rated 5 movies so far and it's still showing 1 result
 
 
+Later
+Fix when movies are loaded again that it retains old movies and pulls duplicates to reduce api calls. 
+Remove the code for multiple moves on a page
+- add genre exclusion - this needs to happen there are so many movies I haven't seen
+See why scraper fails sometimes despite rescue 
+Figure faster way to do against the grain
+- I want to add a movie page where it shows the title of the movie and the reviewers below with the score and names
+- I want the movies hyperlinked to /movie/:id from the critic page
+- I want the critics hyperlinked from the movies page
+- I want to be able to review some movies, see top critics, click the critics, see matches, see a movie that i know i liked that others didn't like, then click 
+	on the movie
+- Ideally the critic page displays movies for a critic matched at top if there are any then the other ifelds then all movies reviewed with highest metacritic difference
 
-Now
-2. Fix when movies are loaded again that it retains old movies and pulls duplicates
-3. create a critic page to show how your reviews stack against their reviews then show top 5 movies they liked with the greatest difference between 
-metacritic average and theirs
-
-
-Hard questions
-- whats the best - 2 reviews with high match or 10 reviews with slightly lower match? what's the minimum number of movies rated percentage
-
-
-
-
-
-
-Front end
-- recent scrapes seem to be getting null names? oh shit because i don't have names set into it? only with the rake task??? check that.
-- fix media queries
-
-
-
-- get media queries working - make title smaller, fix offset for the names, maybe make the font for the critic names smaller. make the 
-- then loop through userReviews and critics_reviews
-- add critics page /critics/:id
-	- put if statement to run js to set up critics page based off data. no thumbnails just movie titles with bars below or maybe it's the user score on left, movie name in middle? i don't know figure out how to style this
-	- displays two bars with 0 space on top of each other with user and critic name next to it
-	to the left is the thumbnail and name
-	we don't need api call, we can just find the movies array? or we do because of active or we can create a second object that holds all the movies and the active movies and acts as a reference for us to draw on when we are listing movies on critics page
-
-
-- make sure i'm not pulling duplicates or that there are no duplicate movies
--	TODO write a test for the api endpoint for pulling the movies to verify that it filters out duplicates after pulling twice from the api
-
-- maybe after 30 reviews or something it takes top 20 critics matched so far and compares among them? or some point it narrows the critics its comparing to?
-- I need to make sure that i am really matching correctly 
-
-
-- maybe the larger the metacritic score difference between what you rated and what average critic score is - the heavier that match is weighted versus ones that are obvious like everyone loves toy story YES. THIS SEEMS THE BEST APPROACH
-- also i think it should be one movie at a time because you don't have to click all over
 
 Scraper
 - record video showing code and app
 - Javascript tests with mocha or jasmine
 
-Later
-
-
-stretch
-- add mobile support
-	critic matcher title gets smaller
-	critic name and percentage only
-	have only two movies centered and have some logic to prevent more
-- add genre exclusion
-- when reviews are done. delete all movie reviews that are older than 5 years and movies that are older than 5 years. this would reduce the database a lot 
-
 
 Bugs
-- when you click on the critic match header it flashes movies in a row below for a second before loading just the top six
 - figure out why in theater scraper fails at "rought night" saying 
 NoMethodError: undefined method `search' for nil:NilClass
 /Users/nickdamiano/code/critic-match/critic-match/app/jobs/metacritic_scraper.rb:94:in `scrape_one_movies_reviews'
-- all movies has 12 movies temporarily because it pulls 6 and also gets 6 more which means when i do delete active from all it deletes 12 instead of 6 whenever i'm refreshing the page. if i just load it once and click on the movies it will not have that problem.
 
-Ideas for later
-See critics who are reviewing movies today that have been active up to 20 years, if it's significant, try it with them where you find a list of cult movies and mix those in with each page. also probably have to see first last name and maybe combine
-- it would be cool if the app could detect which movies they were rating and which they weren't seeing and adjust the movies it asked them, like by genre without asking them. 
-- After you get a critic you can rate movies just with him or just him and the top 3 are compared to refine it the most?
+Why is the movie ID nil for the CriticMovie Object?
+
 
 
